--- a/rootv5/Dockerfile
+++ b/rootv5/Dockerfile
@@ -10,7 +10,7 @@ ENV PYTHONPATH $PYTHONPATH:$ROOTSYS/lib:$ROOTSYS/bindings/pyroot
 
 RUN yum -y install epel-release && yum -y update \
     && yum install -y perl git cmake gcc-c++ gcc binutils bash \
-    make libX11-devel libXpm-devel libXft-devel libXext-devel \
+    make libX11-devel libXpm-devel libXft-devel libXext-devel xbae-devel libXaw-devel \
     subversion scons patch expat-devel mysql-devel bzip2-devel \
     blas-devel blas-static lapack-devel lapack-static bzip2 tcsh \
     sqlite-devel gcc-gfortran openssl-devel pcre-devel \
@@ -19,7 +19,7 @@ RUN yum -y install epel-release && yum -y update \
     avahi-compat-libdns_sd-devel libldap-dev python-devel \
     libxml2-devel gsl-static xz tar file scons openmotif-devel \
     wget libXmu-devel libXp-devel libXt-devel libjpeg-devel libpng-devel \
-    tcl tcl-devel tk tk-devel imake \
+    tcl tcl-devel tk tk-devel imake libtool \
     && yum clean all \
     && ln -s /usr/lib64/liblapack.a /usr/lib64/liblapack3.a
 
