remove mysql links

--- a/clas/Dockerfile
+++ b/clas/Dockerfile
@@ -17,9 +17,7 @@ ENV CERN_LIB $CERN_ROOT/lib
 ENV CERN_BIN $CERN_ROOT/bin
 ENV LD_LIBRARY_PATH $ROOTSYS/lib
 
-RUN ln -s $CERN_LIB $CERN \
-  && ln -s /lib64/mysql/* /lib64/ \
-  && ln -s /usr/include/mysql/* /usr/include/
+RUN ln -s $CERN_LIB $CERN
 
 COPY clas-software /clas_software
 
