--- a/clas-software/simulation/generators/sconstruct
+++ b/clas-software/simulation/generators/sconstruct
@@ -3,5 +3,4 @@ from build_system import environment
 simulationEnv = environment.env(deps=['clas6'])
 simulationEnv.load_dependency('clas6')
 
-simulationEnv.sconstruct('genr8 ppgen fsgen'.split())
-
+simulationEnv.sconstruct('genr8 ppgen fsgen aao'.split())
