--- a/clas-software/simulation/generators/aao/aao_norad/sconstruct
+++ b/clas-software/simulation/generators/aao/aao_norad/sconstruct
@@ -1,22 +1,9 @@
 from build_system import environment
 
-# import the environment from the sconstruct in above directories
-# or create a new environment to emulate it.
-try:
-    Import('aaoEnv')
-    aao_noradEnv = environment.init_clone(aaoEnv, inc_dirs=['.', 'include'])
-except:
-    aaoEnv = environment.new(modules=['cern', 'clas'])
-    Export('aaoEnv')
-    aaoEnv.SConscript(
-        'sconstruct',
-        variant_dir = aaoEnv['buildObjDir'],
-        src_dir = '.',
-        duplicate  = 0)
-    Return()
-
-aao_noradEnv.load_dependency(['cern'])
-aao_noradEnv.load_dependency({'clas':['io','io_bosio']})
+aao_noradEnv = environment.env(deps='clas6 cern')
+aao_noradEnv.AppendUnique(FORTRANPATH = ['.','./include'])
+#aao_noradEnv.load_dependency(['clas6'])
+#aao_noradEnv.load_dependency({'clas6' : ['recsis_libs', 'default_libs']})
 
 ignore_list = ['aaosig1.F', 'ekine.F']
 
