--- a/clas-software/simulation/generators/aao/aao_norad/sconstruct
+++ b/clas-software/simulation/generators/aao/aao_norad/sconstruct
@@ -1,12 +1,12 @@
 from build_system import environment
 
-aao_noradEnv = environment.env(deps='clas6 cern')
-aao_noradEnv.AppendUnique(FORTRANPATH = ['.','./include'])
-#aao_noradEnv.load_dependency(['clas6'])
-#aao_noradEnv.load_dependency({'clas6' : ['recsis_libs', 'default_libs']})
+aao_radnoEnv = environment.env(deps='clas6 cern')
+aao_radnoEnv.AppendUnique(FORTRANPATH = ['.','./include'])
+aao_radnoEnv.load_dependency(['clas6'])
+aao_radnoEnv.load_dependency({'clas6' : ['recsis_libs', 'c_bos_io', 'bosio', 'default_libs']})
 
 ignore_list = ['aaosig1.F', 'ekine.F']
 
-aao_noradEnv.program(
+aao_radnoEnv.program(
     target = 'aao_norad',
     ignore = ignore_list)
