--- a/clas-software/simulation/generators/aao/sconstruct
+++ b/clas-software/simulation/generators/aao/sconstruct
@@ -3,4 +3,4 @@ from build_system import environment
 aaoEnv = environment.env(deps='clas6 cern')
 aaoEnv.load_dependency('clas6 cern')
 #aaoEnv.sconstruct('aao_rad aao_norad')
-aaoEnv.sconstruct('elast_gen aao_rad'.split())
+aaoEnv.sconstruct('elast_gen aao_rad aao_norad'.split())
