Adding travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 sudo: required
-
-services:
-  - docker
-
+language: cpp
 before_install:
-  - docker build -t clas6:test clas/.
-
+  - eval "$(curl -sL https://raw.github.com/fniephaus/travis-remote-shell/master/run.sh)"
+services:
+- docker
 script:
-  - docker images clas6:test
+- docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
+- docker build -t tylern4/clas6 clas6/.
+- docker images -a
+- docker push tylern4/clas6
