--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ language: cpp
 services:
 - docker
 script:
+- mkdir parms
 - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
 - docker build -t tylern4/clas6 .
 - docker images -a
