--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,6 @@ services:
 script:
 - mkdir -p parms
 - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
-- docker build -t tylern4/clas6 .
-- docker build -t tylern4/clas6:g11 -f g11.Dockerfile .
+- docker build -t tylern4/clas6 -f Docker/Dockerfile Docker
 - docker images -a
 - docker push tylern4/clas6
