--- a/Docker/src/clas-software/simulation/generators/aao/sconstruct
+++ b/Docker/src/clas-software/simulation/generators/aao/sconstruct
@@ -3,6 +3,6 @@ from build_system import environment
 aaoEnv = environment.env(deps='clas6 cern')
 aaoEnv.load_dependency('clas6 cern')
 #aaoEnv.sconstruct('aao_rad aao_norad')
-aaoEnv.sconstruct('aao_norad aao_rad onepigen elast_gen'.split())
+aaoEnv.sconstruct('aao_norad aao_rad_old aao_rad onepigen elast_gen'.split())
 
 #allk ccebac elast_gen elast_gen_old fidu janr03 kaon_norad kaon_rad keppel_norad keppel_rad onepigen spp_int_e1 spp_int_eg1 spp_int_eg4'.split())
